<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond2">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/textbox"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/textbox"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/button"
        android:id="@+id/click_2"
        android:text="@string/click_2"
        android:onClick="doNotif1"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/button"
        android:id="@+id/click_1"
        android:text="@string/click_1"
        android:onClick="doNotif"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/button"
        android:id="@+id/carte"
        android:text="@string/carte"
        android:onClick="doLocate"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/Button_n"
        android:text="@string/button_n"
        android:background="@drawable/button"
        android:onClick="doNext"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:layout_marginLeft="100dp"
        android:id="@+id/date"
        android:text="@string/date"
        android:onClick="doDate"/>

</LinearLayout>